# django_pastebin

./: .gitignore  README.md  pyproject.toml
clipboard/: admin.py  models.py  urls.py  views.py
clipboard/migrations/: 0001_initial.py  0002_comment.py  0003_rename_clipboard_c_content_9451d8_idx_clipboard_c_content_7aa003_idx.py  0004_alter_comment_object_id.py
clipboard/templates/: 422.html
clipboard/templates/clipboard/: comment_form.html  comments.html  create.html  list.html  view.html
config/: settings.py  urls.py
