[project]
name = "django-pastebin"
version = "0.1.0"
description = "Cloud Pastebin"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["django>=6.0.7", "pymysql>=1.2.0", "dj-database-url>=3.1.2"]

[dependency-groups]
dev = ["django-stubs>=6.0.7", "ruff>=0.15.22"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
extend-select = ["E", "E501", "I", "I001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 120
